--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: 'description'
 keywords: 'keywords,keywords,keywords'
 author: author
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -112,12 +112,23 @@ search:
   format: html
   limit: 10
 
-symbols_count_time:
-  symbols: true
-  time: true
-  total_symbols: true
-  total_time: true
-  exclude_codeblock: false
-  awl: 2    
-  wpm: 275
-  suffix: "mins."
+# symbols_count_time:
+#   symbols: true
+#   time: true
+#   total_symbols: true
+#   total_time: true
+#   exclude_codeblock: false
+#   awl: 2    
+#   wpm: 275
+#   suffix: "mins."
+# Post wordcount display settings
+# Dependencies: https://github.com/willin/hexo-wordcount
+post_wordcount:
+  item_text: true
+  #字数统计
+  wordcount: true
+  #预览时间
+  min2read: true
+  #总字数,显示在页面底部
+  totalcount: true
+  separated_meta: true
